Get SUMIF to work with external references. (fdo#33002)